--- a/build.gradle
+++ b/build.gradle
@@ -159,10 +159,13 @@ dependencies {
   compileOnly 'org.springframework:spring-context:5.0.0.RELEASE'
   compileOnly 'org.springframework:spring-web:5.0.0.RELEASE'
 
+  compileOnly 'org.slf4j:slf4j-api:1.3.0'
+
   ////////////////////////////////
   //Test Dependencies/////////////
   ////////////////////////////////
   // This fulfils the SpringWeb and SpringContext 5.x.x requirement
+  // As well as the SLF4J 1.3+ requirement
   testImplementation 'org.springframework.boot:spring-boot-starter-web:2.4.2'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.2'
