--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ def s84JarName = 'resttemplateconfig'
 def s84Description = 'Creates a RestTemplate in a Spring service'
 def s84GithubBase = 'https://github.com/service84-io/rest-template-config'
 def s84Version = '1.3.50-SNAPSHOT'
+def s84CoreName = s84JarName.split('-')[0]
 
 // configure all java components to be published
 publishing {
