--- a/version.gradle
+++ b/version.gradle
@@ -15,6 +15,6 @@ ext {
   s84JarName = 'resttemplateconfig'
   s84Description = 'Creates a RestTemplate in a Spring service'
   s84GithubBase = 'https://github.com/service84-io/rest-template-config'
-  s84Version = '1.3.50-SNAPSHOT'
+  s84Version = '1.3.50'
 }
 
